--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.3.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-icons": "^5.3.0",
     "sass": "^1.80.5",
     "zustand": "^5.0.1"
   },
